--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,5 +5,24 @@
     font-family: 'Montserrat', sans-serif;
 }
 nav{
+    width: 100%;
+    height: 80px;
+    background-color:aquamarine ;
+}
+ul{list-style: none;}
+li{
     
+}
+h1{
+    color: cornflowerblue;
+    font-size: 60px;
+}
+.container1{
+    display: flex;
+    justify-content:flex-end;
+}
+.caja{
+    margin: 15px;
+    display: flex;
+    text-decoration: none;
 }
