--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,14 +7,11 @@
 nav{
     width: 100%;
     height: 80px;
-    background-color:aquamarine ;
+    background-color: white ;
 }
 ul{list-style: none;}
-li{
-    
-}
 h1{
-    color: cornflowerblue;
+    color: #6666b8;
     font-size: 60px;
 }
 .container1{
@@ -24,5 +21,9 @@ h1{
 .caja{
     margin: 15px;
     display: flex;
-    text-decoration: none;
+}
+.container2{
+    background-color: #f0f0fa;
+    width: 100vw;
+    height: 100vh;
 }
