--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,14 +8,19 @@ nav{
     width: 100%;
     height: 80px;
     background-color: white ;
+    position:fixed
+    
 }
-ul{list-style: none;}
+ul{list-style: none; }
 h1{
     color: #6666b8;
     font-size: 60px;
 }
-a{
-    text-decoration: none;
+a{text-decoration: none;}
+section{
+    width: 50%;
+    height: 200px;
+    border:2px solid black;
 }
 .container1{
     height: 100%;
@@ -31,19 +36,15 @@ a{
     background-color: #f0f0fa;
     width: 100vw;
     height: 100vh;
-    border:2px solid black;
-}
-.imagen{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-}
-section{
-    width: 50%;
-    height: 200px;
-    border:2px solid black;
 
+}
+.centro{
+    text-align: center;
+    width: 50%;
+    height: 250px;
+    border:2px solid black;
+    margin: 80px;
+    padding: 20px;
 }
 .containerfinal{
     border:2px solid black;
@@ -51,5 +52,5 @@ section{
     justify-content: space-between;
 }
 .cajafinal1{
-    
+    text-align: center;
 }
