--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,6 @@ nav{
     height: 80px;
     background-color: white ;
     position:fixed
-    
 }
 ul{list-style: none; }
 h1{
@@ -36,21 +35,36 @@ section{
     background-color: #f0f0fa;
     width: 100vw;
     height: 100vh;
-
+    display: flex;
+    flex-direction: row;
+    
+}
+.padding{
+    padding-top: 100px;
 }
 .centro{
-    text-align: center;
-    width: 50%;
-    height: 250px;
-    border:2px solid black;
+
+    width: 500px;
+    height: 150px;
+    border:1px solid black;
     margin: 80px;
     padding: 20px;
 }
+.imagen{
+    display: flex;
+    justify-content: end;
+}
+
+
+
+
+
 .containerfinal{
     border:2px solid black;
     display: flex;
     justify-content: space-between;
 }
+
 .cajafinal1{
     text-align: center;
 }
