--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,9 +14,9 @@ ul{list-style: none; }
 h1{
     color:#00ACBF;
     font-size: 60px;
-    margin: 20px;
+    margin: 15px;
 }
-a{text-decoration: none;
+a{  text-decoration: none;
     color: black;}
 section{
     width: 50%;
@@ -37,8 +37,9 @@ section{
     height: 30px;
     border-radius: 20px;
     background-color: #00ACBF;
-    color: white;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .container2{
     background-color:#00acbf15;
@@ -46,6 +47,7 @@ section{
     height: 100vh;
     display: flex;
     flex-direction: row;
+    
 }
 .padding{
     padding-top: 100px;
@@ -56,7 +58,6 @@ section{
     margin: 80px;
     margin-top: 200px;
     padding: 20px;
-    
     }
 .imagen{
     display: flex;
@@ -70,6 +71,9 @@ section{
     border-radius: 20px;
     background-color: #00ACBF;
     color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
