--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,9 +18,10 @@ h1{
 }
 a{  text-decoration: none;
     color: black;}
-section{
-    width: 50%;
-    height: 200px;
+
+main{
+    display: flex;
+    flex-direction: column;
 }
 .container1{
     height: 100%;
@@ -40,6 +41,7 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
+    color:white
 }
 .container2{
     background-color:#00acbf15;
@@ -76,15 +78,50 @@ section{
     align-items: center;
 }
 
+/*-------------------------*/
+
+.container3{
+    width: 100vw;
+    height: 500px;
+    border:2px solid black;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 50px;
+}
+.conocimientos{
+    display: flex;
+    flex-direction: column;
+    line-height: 70px;
+    text-align: center;
+}
+h2{
+    font-size: 35px;
+}
 
 
+
+
+
+/*-------------------------*/
 
 .containerfinal{
     border:2px solid black;
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    height: 500px;
 }
 
 .cajafinal1{
+    width: 50%;
+    height: 100px;
     text-align: center;
+    display: flex;
+}
+.cajafinal2{
+    width: 50%;
+    height: 100px;
+    text-align: center;
+
 }
