--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,10 +10,10 @@ body{
     overflow-x:hidden
 }
 header{
-    position: fixed;
-    top:0;
     width: 100%;
     height: 80px;
+    position: fixed;
+    top:0;
     display: flex;
     justify-content: flex-end;
     flex-direction: row;
@@ -65,6 +65,7 @@ main{
     width: 100%;
     display: flex;
     flex-direction: row;
+
 }
 .padding{
     padding-top: 100px;
@@ -73,9 +74,9 @@ main{
     width: 50%;
     height: 150px;
     margin-left: 100px;
-    margin-top: 200px;
+    margin-top: 130px;
     padding: 50px;
-    }
+}
 .imagen{
     display: flex;
     justify-content: center;
@@ -87,20 +88,21 @@ main{
     height: 40px;
     border-radius: 20px;
     background-color: #00ACBF;
-    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
+.color{
+    color: white;
+}
 
 /*-------------------------*/
 
 .container3{
     width: 100%;
-    height: 900px;
-    background-color:#00acbf15;
     padding-top: 100px;
+    background-color:#00acbf15;
+
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -108,40 +110,47 @@ main{
 }
 .conocimientos{
     font-size: 30px;
+
+    padding-top: 100px;
 }
 .parrafo{    
     width: 500px;
     height: 100px;
     padding: 50px;
     font-size: 16px;
-}
-.negrita{
-    flex-wrap: 800px;
+
 }
 .containerCard{
     width: 70%;
-    height: 200px;
+    height: 800px;
     display: flex;
     justify-content: center;
-    margin-top: 60px;
+    margin: 20px;
     flex-wrap: wrap;
+    padding-bottom: 100px;
+
 }
 .card{
-    width: 230px;
+    width: 260px;
     height: 230px;
     border: 1px solid lightgrey;
     border-radius: 5px;
     background-color: white;
     margin: 20px;
-    font-weight: 800px;
+    font-weight: 800;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     
 }
+.tamaño{
+    font-size: 20px;
+}
+
 .fab{
-    margin-bottom: 15px;}
+    margin-bottom: 15px;
+}
 .fa-html5{
     color:#E54D26;
     font-size: 80px;
@@ -172,7 +181,6 @@ main{
 .container4{
     background-color:#00ACBF;
     width: 100%;
-    height: 500px;
     color: white;
     text-align: center;
     display: flex;
@@ -181,30 +189,56 @@ main{
     flex-direction: column;
     
 }
+.fa-quote-right{
+    font-size: 80px;
+    margin-top: 110px;
+}
 .parrafo1{
     width: 750px;
     height: 150px;
-    padding: 30px;
     font-size: 20px;
     margin-top: 40px;
+    padding: 20px;
+
 }
 h3{
     font-size: 30px;
-    padding: 20px;
+    padding-bottom: 100px;
+    margin-top: 30px;
 }
-.fa-quote-right{
-    font-size: 80px;
-}
+
 /*--------------------------------*/
 .container5{
     width: 100%;
-    border: 1px solid black;
+    background-color:rgb(130, 214, 186);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
 }
-.proyectos{
-    
-}
 
+.proyectos{
+    width: 500px;
+    font-size: 20px;
+    margin-top: 40px;
+    padding: 20px;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.cambios{
+    font-size: 50px;
+    font-weight:800;
+}
+.parrafo2{
+    width: 300px;
+    height: 150px;
+    padding: 20px;
+    border: 1px solid black;
+}
 
 
 
