--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,400;0,800;1,100;1,400;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,600;0,800;0,900;1,600&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -60,16 +60,17 @@ main{
     color:white
 }
 /*-----------------------*/
+.padding{
+    padding-top: 100px;
+}
 .container2{
     background-color:#fcfeff;
     width: 100%;
     display: flex;
     flex-direction: row;
+    padding-top: 50px;
+}
 
-}
-.padding{
-    padding-top: 100px;
-}
 .centro{
     width: 50%;
     height: 150px;
@@ -102,7 +103,6 @@ main{
     width: 100%;
     padding-top: 100px;
     background-color:#00acbf15;
-
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -110,33 +110,32 @@ main{
 }
 .conocimientos{
     font-size: 30px;
+    font-weight: 900;
+    padding-top: 50px;
 
-    padding-top: 100px;
 }
 .parrafo{    
     width: 500px;
     height: 100px;
-    padding: 50px;
+    padding: 40px;
     font-size: 16px;
-
 }
 .containerCard{
     width: 70%;
-    height: 800px;
+    height: 600px;
     display: flex;
     justify-content: center;
-    margin: 20px;
+    margin: 60px;
     flex-wrap: wrap;
-    padding-bottom: 100px;
-
+    padding-bottom: 80px;
 }
 .card{
     width: 260px;
     height: 230px;
     border: 1px solid lightgrey;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: white;
-    margin: 20px;
+    margin: 10px;
     font-weight: 800;
     display: flex;
     justify-content: center;
@@ -210,40 +209,61 @@ h3{
 /*--------------------------------*/
 .container5{
     width: 100%;
-    background-color:rgb(130, 214, 186);
+    background-color:#fcfeff;
+    flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     text-align: center;
 }
-
 .proyectos{
-    width: 500px;
+    width: 50%;
     font-size: 20px;
-    margin-top: 40px;
-    padding: 20px;
-    border: 1px solid black;
+    margin-top: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 .cambios{
-    font-size: 50px;
-    font-weight:800;
+    font-size: 45px;
+    font-weight: 900;
 }
 .parrafo2{
-    width: 300px;
-    height: 150px;
+    width: 65%;
+    height: 100px;
+    font-size: 17px;
     padding: 20px;
-    border: 1px solid black;
 }
+.containerCard2{
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 30px;
+    margin-left: 80px;
+}
+.cardFoto{
+    width: 28%;
+    height: 310px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    color:rgb(104, 104, 104) ;
+    font-weight: 600;
+    margin: 20px;
+    flex-direction: column;
+}
+.tamaño2{
+    border-radius: 15px;
+    width: 100%;
+    height: 200px ;
+}
+.mt20{
+    position: relative;
+    top:30px;
+}
+/*-------------------*/
 
 
-
-
-/*
 .containerfinal{
     border:2px solid black;
     display: flex;
@@ -263,4 +283,6 @@ h3{
     height: 100px;
     text-align: center;
 
-}*/
+}
+
+/*-----------------------*/
