--- a/styles/styles.css
+++ b/styles/styles.css
@@ -70,7 +70,6 @@ main{
     flex-direction: row;
     padding-top: 50px;
 }
-
 .centro{
     width: 50%;
     height: 150px;
@@ -112,7 +111,6 @@ main{
     font-size: 30px;
     font-weight: 900;
     padding-top: 50px;
-
 }
 .parrafo{    
     width: 500px;
@@ -261,28 +259,63 @@ h3{
     position: relative;
     top:30px;
 }
+
 /*-------------------*/
-
-
 .containerfinal{
-    border:2px solid black;
-    display: flex;
-    justify-content: space-between;
     width: 100%;
-    height: 500px;
+    background-color: #00acbf15;
+    display: flex;    
+    justify-content: center;
+    align-items: center;
+    border:1px solid black;
+    padding-top:200px ;
 }
-
+.containerfinal2{
+    width: 80%;
+    background-color:#fcfeff ;
+    padding-top: 70px;
+    border:1px solid black;
+    display: flex;
+    border-radius: 15px;
+    
+}
 .cajafinal1{
     width: 50%;
-    height: 100px;
-    text-align: center;
+    height: 500px;
+    font-size: 16px;
     display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    /*border:1px solid black;*/
 }
+.contactame{
+    font-weight: 900;
+    font-size: 50px;
+    margin-left: 50px;
+}
+.lorem{
+    margin:50px;
+}
+.containerfinal3{
+    height: 190px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border:1px solid black
+}
+.fab{
+    color: #00ACBF;
+    }
+.fas{
+    color: #00ACBF;
+}
+
+
 .cajafinal2{
     width: 50%;
-    height: 100px;
+    height: 500px;
     text-align: center;
-
+    border:1px solid black;
 }
 
 /*-----------------------*/
