--- a/animaciones.css
+++ b/animaciones.css
@@ -3,40 +3,94 @@
     transition-duration:unset;
     color:#00ACBF;
 }
+.caja:active{
+    transition-property:  border ;
+    transition-duration:unset;
+    border-radius: 40%;
+    border: 0.1px solid #00ACBF;
+    box-shadow: 0px 0px 10px 1px #00ACBF;
+    padding: 10px;
+}
+/*------*/
 .caja1:hover {
     transition-property: background-color;
     transition-duration:unset;
     background-color:#04def7 ;
 }
+.caja1:active{
+    transition-property: background-color border;
+    transition-duration:unset;
+    border:0.5px solid #00ACBF;
+    box-shadow: 0px 0px 10px 3px #00ACBF;
+    background-color:#00ACBF ;
+}
+/*------*/
 .loquehago:hover{
     transition-property: background-color;
     transition-duration:unset;
     background-color:#04def7 ;
 }
+.loquehago:active{
+    transition-property: background-color border;
+    transition-duration:unset;
+    border:0.5px solid #00ACBF;
+    box-shadow: 0px 0px 10px 3px #00ACBF;
+    background-color:#00ACBF ;
+}
+/*------*/
 .card:hover{
     transition-property: border color;
     transition-duration:unset;
     border:1px solid #00ACBF ;
     color:#00ACBF
 }
+/*------*/
 .cardFoto:hover {
     transition-property: border color;
     transition-duration:unset;
     border:2px solid #00ACBF ;
     color: #00ACBF;
 }
+.cardFoto:active{
+    transition-property: border;
+    transition-duration:unset;
+    border:0.5px solid #00ACBF;
+    box-shadow: 0px 0px 10px 3px #00ACBF;
+}
+
+
+
+
+
+
+/*---- Morificar ----*/
 
 .cambios2:hover {
     transition-property: background-color color border;
     transition-duration:unset;
     background-color:#00ACBF;
     color:white;
+    padding:10px ;
 }
 .color2:hover{
     transition-property: color ;
     transition-duration:unset;
     color:#00ACBF;
 }
+.caja-active:active{
+    transition-property: border ;
+    transition-duration: unset;
+    border-radius: 30px;
+    border: 1px solid #00ACBF;
+    text-align: center;
+}
+
+
+
+
+
+
+/*------*/
 .cambios3:hover{
     transition-property: background-color color border;
     transition-duration:unset;
@@ -44,10 +98,10 @@
     color:white;
     border: 1px solid white;
 }
-
 .cambios3:active{
     transition-property: border;
     transition-duration:unset;
     border:0.5px solid white;
     box-shadow: 0px 0px 13px 3px white;
 }
+
