--- a/animaciones.css
+++ b/animaciones.css
@@ -1,10 +1,8 @@
 .caja:hover{
-    transition-property: color;
     transition-duration:unset;
     color:#00ACBF;
 }
 .caja:active{
-    transition-property:  border ;
     transition-duration:unset;
     border-radius: 40%;
     border: 0.1px solid #00ACBF;
@@ -13,25 +11,21 @@
 }
 /*------*/
 .caja1:hover {
-    transition-property: background-color;
     transition-duration:unset;
     background-color:#04def7 ;
 }
 .caja1:active{
-    transition-property: background-color border;
     transition-duration:unset;
     border:0.5px solid #00ACBF;
     box-shadow: 0px 0px 10px 3px #00ACBF;
     background-color:#00ACBF ;
 }
 /*------*/
-.loquehago:hover{
-    transition-property: background-color;
+.lo-que-hago:hover{
     transition-duration:unset;
     background-color:#04def7 ;
 }
-.loquehago:active{
-    transition-property: background-color border;
+.lo-que-hago:active{
     transition-duration:unset;
     border:0.5px solid #00ACBF;
     box-shadow: 0px 0px 10px 3px #00ACBF;
@@ -39,21 +33,57 @@
 }
 /*------*/
 .card:hover{
-    transition-property: border color;
     transition-duration:unset;
     border:1px solid #00ACBF ;
     color:#00ACBF
 }
 /*------*/
-.cardFoto:hover {
-    transition-property: border color;
+.card-foto:hover {
     transition-duration:unset;
     border:2px solid #00ACBF ;
     color: #00ACBF;
 }
-.cardFoto:active{
-    transition-property: border;
+.card-foto:active{
     transition-duration:unset;
+    border:0.5px solid #00ACBF;
+    box-shadow: 0px 0px 10px 3px #00ACBF;
+}
+textarea:active{
+    transition-duration:unset;
+    border:0.5px solid #00ACBF;
+    box-shadow: 0px 0px 10px 3px #00ACBF;
+}
+
+button:hover{
+    transition-duration:unset;
+    background-color:#04def7 ;
+}
+button:active{
+    transition-duration:unset;
+    border:0.5px solid #00ACBF;
+    box-shadow: 0px 0px 10px 3px #00ACBF;
+    background-color:#00ACBF ;
+}
+/*---- Morificar ----*/
+
+.cambios2:hover {
+    transition-duration:unset;
+    background-color:#00ACBF;
+    color:white;
+    padding:10px ;
+}
+.color2:hover{
+    transition-duration:unset;
+    color:#00ACBF;
+}
+.caja-active:active{
+    transition-duration: unset;
+    border-radius: 30px;
+    border: 1px solid #00ACBF;
+    text-align: center;
+}
+input:active{
+    transition-duration: unset;
     border:0.5px solid #00ACBF;
     box-shadow: 0px 0px 10px 3px #00ACBF;
 }
@@ -62,44 +92,14 @@
 
 
 
-
-/*---- Morificar ----*/
-
-.cambios2:hover {
-    transition-property: background-color color border;
-    transition-duration:unset;
-    background-color:#00ACBF;
-    color:white;
-    padding:10px ;
-}
-.color2:hover{
-    transition-property: color ;
-    transition-duration:unset;
-    color:#00ACBF;
-}
-.caja-active:active{
-    transition-property: border ;
-    transition-duration: unset;
-    border-radius: 30px;
-    border: 1px solid #00ACBF;
-    text-align: center;
-}
-
-
-
-
-
-
 /*------*/
 .cambios3:hover{
-    transition-property: background-color color border;
     transition-duration:unset;
     background-color:#00ACBF;
     color:white;
     border: 1px solid white;
 }
 .cambios3:active{
-    transition-property: border;
     transition-duration:unset;
     border:0.5px solid white;
     box-shadow: 0px 0px 13px 3px white;
