--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,18 +26,12 @@ nav{
     display: flex;
     justify-content: center;
 }
-ul{list-style: none;}
-h1{
-    color:#00ACBF;
-    font-size: 60px;
-    margin: 15px;
+ul{
+    list-style: none;
 }
-a{  text-decoration: none;
-    color: black;}
-
-main{
-    display: flex;
-    flex-direction: column;
+a{  
+    text-decoration: none;
+    color: black;
 }
 .container1{
     height: 100%;
@@ -63,6 +57,15 @@ main{
 .padding{
     padding-top: 100px; /* Separa la parte de arriba para que se vea la foto*/
 }
+main{
+    display: flex;
+    flex-direction: column;
+}
+h1{
+    color:#00ACBF;
+    font-size: 60px;
+    margin: 15px;
+}
 .container2{
     background-color:#fcfeff;
     width: 100%;
@@ -77,12 +80,7 @@ main{
     margin-top: 130px;
     padding: 50px;
 }
-.imagen{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.loquehago{
+.lo-que-hago{
     margin: 20px;
     width: 200px;
     height: 40px;
@@ -95,9 +93,13 @@ main{
 .color1{
     color: white;
 }
+.imagen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 /*-------------------------*/
-
 .container3{
     width: 100%;
     padding-top: 100px;
@@ -118,7 +120,7 @@ main{
     padding: 40px;
     font-size: 16px;
 }
-.containerCard{
+.container-card{
     width: 70%;
     height: 600px;
     display: flex;
@@ -172,9 +174,7 @@ main{
     color:#F34F29;
     font-size: 80px;
 }
-
 /*-------------------------*/
-
 .container4{
     background-color:#00ACBF;
     width: 100%;
@@ -184,7 +184,6 @@ main{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    
 }
 .fa-quote-right{
     font-size: 80px;
@@ -196,9 +195,8 @@ main{
     font-size: 20px;
     margin-top: 40px;
     padding: 20px;
-
 }
-h3{
+h4{
     font-size: 30px;
     padding-bottom: 100px;
     margin-top: 30px;
@@ -233,14 +231,14 @@ h3{
     font-size: 17px;
     padding: 20px;
 }
-.containerCard2{
+.container-card2{
     width: 90%;
     display: flex;
     flex-wrap: wrap;
     margin: 30px;
     margin-left: 80px;
 }
-.cardFoto{
+.card-foto{
     width: 28%;
     height: 310px;
     border: 1px solid gray;
@@ -261,24 +259,23 @@ h3{
 }
 
 /*-------------------*/
-.containerfinal{
+.container-final{
     width: 100%;
     background-color: #00acbf15;
     display: flex;    
     justify-content: center;
     align-items: center;
-    border:1px solid black;
-    padding-top:200px ;
+    padding:5%;
 }
-.containerfinal2{
+.container-final2{
     width: 80%;
     background-color:#fcfeff ;
     padding-top: 70px;
-    border:1px solid black;
     display: flex;
     border-radius: 15px;
+    margin:5%;
 }
-.cajafinal1{
+.caja-final1{
     width: 50%;
     height: 500px;
     font-size: 16px;
@@ -286,7 +283,7 @@ h3{
     align-items: flex-start;
     flex-direction: column;
 }
-.contactame{
+h2{
     font-weight: 900;
     font-size: 50px;
     margin-left: 50px;
@@ -296,14 +293,13 @@ h3{
     width: 70%;
     padding-left: 30px;
 }
-.containerfinal3{
+.container-item{
     height: 250px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-left: 15%;
     padding-bottom: 50px;
-
 }
 .cambios2{
     color: #00ACBF;
@@ -317,19 +313,72 @@ h3{
 .color2{
     color:black;
 }
-
-/*--Terminar Formulario--*/
-
+/*--Form--*/
 .cajafinal2{
     width: 50%;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    border:1px solid black;
+    flex-direction: row;
+    padding-bottom: 15%;
 }
-
-
-
+form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 7%;
+    /*justify-content: space-between;
+    align-items: flex-start;*/
+}
+.container-form{
+    width: 100%;
+    display: flex;
+    margin-top: 5%;
+    padding-right: 10%;
+    /*flex-direction: row;
+    justify-content: space-between;
+    align-items: center;*/
+}
+.caja-form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin-right: 5%;
+}
+label{
+    font-weight: 600;
+}
+input{
+    width: 100%;
+    height: 40px;
+    background-color: #e7e7e9;
+    border-radius: 20px;
+    padding-left: 15px;
+    border:1px solid #00ACBF;
+    outline: none;
+    margin: 10px;
+}
+textarea{
+    width: 100%;
+    height: 150px;
+    background-color: #e7e7e9;
+    border-radius: 20px;
+    padding: 10px;
+    border:1px solid #00ACBF;
+    outline:none;
+    margin: 10px;
+}
+button{
+    width: 150px;
+    height: 50px;
+    font-size: 15px;
+    color:white;
+    background-color: #00ACBF;
+    border:1px solid #00ACBF;
+    border-radius: 30px;
+    outline:none;
+}
+.caja-button{
+    display: flex;
+    justify-content: center;
+}
 
 
 
