--- a/animaciones.css
+++ b/animaciones.css
@@ -37,6 +37,7 @@
     border:1px solid #00ACBF ;
     color:#00ACBF
 }
+
 /*------*/
 .card-foto:hover {
     transition-duration:unset;
@@ -48,29 +49,15 @@
     border:0.5px solid #00ACBF;
     box-shadow: 0px 0px 10px 3px #00ACBF;
 }
-textarea:active{
-    transition-duration:unset;
-    border:0.5px solid #00ACBF;
-    box-shadow: 0px 0px 10px 3px #00ACBF;
-}
 
-button:hover{
-    transition-duration:unset;
-    background-color:#04def7 ;
-}
-button:active{
-    transition-duration:unset;
-    border:0.5px solid #00ACBF;
-    box-shadow: 0px 0px 10px 3px #00ACBF;
-    background-color:#00ACBF ;
-}
-/*---- Morificar ----*/
+
+
+/*---- NO TOMA TODO JUNTO, LO HACE POR SEPARADO ----*/
 
 .cambios2:hover {
     transition-duration:unset;
     background-color:#00ACBF;
     color:white;
-    padding:10px ;
 }
 .color2:hover{
     transition-duration:unset;
@@ -87,9 +74,21 @@ input:active{
     border:0.5px solid #00ACBF;
     box-shadow: 0px 0px 10px 3px #00ACBF;
 }
-
-
-
+textarea:active{
+    transition-duration:unset;
+    border:0.5px solid #00ACBF;
+    box-shadow: 0px 0px 10px 3px #00ACBF; 
+}
+button:hover{
+    transition-duration:unset;
+    background-color:#04def7 ;
+}
+button:active{
+    transition-duration:unset;
+    border:0.5px solid #00ACBF;
+    box-shadow: 0px 0px 10px 3px #00ACBF;
+    background-color:#00ACBF ;
+}
 
 
 /*------*/
