--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,7 +146,6 @@ h1{
 .tamaño{
     font-size: 20px;
 }
-
 .fab{
     margin-bottom: 15px;
 }
@@ -221,26 +220,20 @@ h4{
     justify-content: center;
     flex-direction: column;
 }
-.cambios{
-    font-size: 45px;
-    font-weight: 900;
-}
 .parrafo2{
-    width: 65%;
-    height: 100px;
+    width: 60%;
     font-size: 17px;
-    padding: 20px;
+    padding-top: 3%;
 }
 .container-card2{
     width: 90%;
     display: flex;
     flex-wrap: wrap;
-    margin: 30px;
-    margin-left: 80px;
+    padding:5%
 }
 .card-foto{
-    width: 28%;
-    height: 310px;
+    width: 29%;
+    height: 290px;
     border: 1px solid gray;
     border-radius: 10px;
     margin: 20px;
@@ -249,13 +242,14 @@ h4{
 .tamaño2{
     border-radius: 15px;
     width: 100%;
-    height: 200px ;
+    height: 200px;
+    
 }
-.mt20{
-    position: relative;
-    top:30px;
-    color:rgb(104, 104, 104);
+h5{
+    /*position: relative;*/
+    margin-top:10%;
     font-weight: 600;
+    font-size: 15px;
 }
 
 /*-------------------*/
@@ -307,13 +301,13 @@ h2{
     border-radius: 50%;
     width: 40px;
     height: 40px;
+    padding:10px ;
     text-align: center;
-    padding: 10px;
 }
 .color2{
     color:black;
 }
-/*--Form--*/
+/*--Formulario--*/
 .cajafinal2{
     width: 50%;
     flex-direction: row;
