--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -59,8 +59,8 @@
     }
     /*---Container final---*/
     .container-final2 {
+        width: 100%;
         display: flex;
-        justify-content: center;
         align-items: center;
         flex-direction: column;
     }
@@ -68,6 +68,7 @@
         font-weight: 600;
         font-size: 25px;
         margin-left: 25px;
+        
     }
     .lorem{
         font-size:15px ;
@@ -77,6 +78,7 @@
     }
     .caja-final2{
         width: 100%;
+        height: 50%;
     }
     .container-form{
         display: flex;
