--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -64,27 +64,33 @@
         align-items: center;
         flex-direction: column;
     }
-    .contactame-escribime{
-        font-weight: 600;
-        font-size: 25px;
-        margin-left: 25px;
-        
-    }
-    .lorem{
-        font-size:15px ;
-    }
     .caja-final1{
         width: 100%;
     }
+    .contactame-escribime{
+        font-weight: 600;
+        font-size: 25px;
+        margin-left: 5px;
+    }
+    .lorem{
+        font-size:15px ;
+        text-align: start;
+        padding-left: 5px;
+    }
+    .container-contactos{
+        margin-left: 15px;
+    }
     .caja-final2{
-        width: 100%;
-        height: 50%;
+        width: 90%;
+        
+    }
+    .escribime{
+        padding-top: 50px;
     }
     .container-form{
         display: flex;
         justify-content: center;
         margin-left: 5%;
-        
     }
     .caja-button{
         padding-bottom: 10%;
